ui_test/parser/fail/duplicate.err
error: Module a is defined by two different files
  ┌─ $DIR/duplicate.camp:2:5
  │
2 │     mod a;
  │     ^^^^^ Module declared here
  │
  = Both $DIR/duplicate/a/mod.camp and $DIR/duplicate/a.camp exist

